--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,8 +1,8 @@
 <h1>Football Shop</h1>
 
 <h4>App Name: </h4>
-<p>{{app_name}}</p> <!-- Ubah sesuai dengan npm kamu -->
+<p>{{app_name}}</p> 
 <h4>Name: </h4>
-<p>{{nama}}</p> <!-- Ubah sesuai dengan nama kamu -->
+<p>{{nama}}</p> 
 <h4>Class: </h4>
-<p>{{class}}</p> <!-- Ubah sesuai dengan kelas kamu -->
+<p>{{class}}</p> 
