--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,8 +1,46 @@
+{% extends 'base.html' %}
+{% block content %}
 <h1>Football Shop</h1>
 
-<h4>App Name: </h4>
-<p>{{app_name}}</p> 
-<h4>Name: </h4>
-<p>{{nama}}</p> 
-<h4>Class: </h4>
-<p>{{class}}</p> 
+<h5>App Name: </h5>
+<p>{{ app_name }}<p>
+
+<h5>Name:</h5>
+<p>{{ nama }}</p>
+
+<h5>Class:</h5>
+<p>{{ class }}</p>
+
+<a href="{% url 'main:add_product' %}">
+    <button>+ Add New Product</button>
+</a>
+
+<hr>
+
+{% if not product_list %}
+<p>Belum ada data produk pada Football Shop</p>
+{% else %}
+
+{% for product in product_list %}
+<div>
+    <h2><a href="{% url 'main:detail_product' product.id %}">{{ product.name }}</a></h2>
+
+    <p><b>{{ product.get_category_display }}</b>{% if product.is_featured %} | 
+    <b>Featured</b>{% endif %}</p>
+
+    {% if product.thumbnail %}
+    <img src="{{ product.thumbnail }}" alt="thumbnail" width="150" height="100">
+    <br />
+    {% endif %}
+
+    <p>{{ product.description|truncatewords:25 }}...</p>
+    <p><a href="{% url 'main:detail_product' product.id %}"><button>Detail</button></a></p>
+</div>
+
+<hr>
+
+{% endfor %}
+
+{% endif %}
+
+{% endblock content %}
