Tugas 4 Implementasi Autentikasi, Session, dan Cookies pada Django

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -15,7 +15,20 @@
     <button>+ Add New Product</button>
 </a>
 
+<a href="{% url 'main:logout' %}">
+  <button>Logout</button>
+</a>
+
+<h5>Sesi terakhir login: {{ last_login }}</h5>
+
 <hr>
+
+<a href="?filter=all">
+    <button type="button">All Products</button>
+</a>
+<a href="?filter=my">
+    <button type="button">My Products</button>
+</a> 
 
 {% if not product_list %}
 <p>Belum ada data produk pada Football Shop</p>
@@ -29,12 +42,19 @@
     <b>Featured</b>{% endif %}</p>
 
     {% if product.thumbnail %}
-    <img src="{{ product.thumbnail }}" alt="thumbnail" width="150" height="100">
+    <img src="{{ product.thumbnail }}" alt="thumbnail" height="100">
     <br />
     {% endif %}
 
     <p>{{ product.description|truncatewords:25 }}...</p>
+
+    <p><b>
+        Rp {{ product.price|floatformat:0 }}
+    </b></p>
+
     <p><a href="{% url 'main:detail_product' product.id %}"><button>Detail</button></a></p>
+
+    
 </div>
 
 <hr>
